# parse-gaussian-output

./: .gitignore  README.md  parse_gaussian_logs.py  parse_logs_sample.py  pyproject.toml
